Fix class badge vertical alignment to middle

--- a/src/renderer/screens/DealerShared.scss
+++ b/src/renderer/screens/DealerShared.scss
@@ -405,7 +405,7 @@ $class-colors: (
   border: 1.5px solid;
   background: transparent;
   display: inline-block;
-  margin-top: 4px;
+  vertical-align: middle;
 
   @each $cls, $color in $class-colors {
     &.#{$cls} { color: $color; border-color: $color; }
